# libdom

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  TODO.md
docs/: DOMAIN.md  README.md
docs/decisions/: 001-event-driven-architecture.md  002-embedded-strings.md  003-byte-at-a-time.md  004-void-elements.md  005-ring-buffer.md  006-plumbing-only.md  007-syscall-free.md  008-callback-free.md  009-configurable-init.md  010-css-extraction.md  011-wasm-bridge.md  012-c11-standard.md
examples/: example_basic.c
fuzz/: fuzz_dom.c
include/: dom.h
src/: dom.c
tests/: test_dialectic.c  test_errors.c  test_smoke.c
